--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,3 +74,29 @@ footer div {
 footer a {
     color: #024e76;
 }
+
+section {
+    padding: 60px;
+}
+
+/*Hero Style Start */
+.hero {
+    background-image: url("../images/hero-bg.jpg");
+    height: 600px;
+    background-size: cover;
+    background-position: center;
+  }
+/*Here Style End */
+
+/*Hero Form Style*/
+
+.hero-form {
+    background-color: #fce138;
+    padding: 20px;
+    width: 500px;
+    color: #024e76;
+    /*Will include border declaration block for learning purposes. Shorthand is border: solid 3px #024e76;*/
+    border-style: solid;
+    border-width: 3px;
+    border-color:#024e76;
+}
