--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -141,3 +141,28 @@ section {
     margin-bottom: 15px;
 }
 
+/* Style all introduction as text-align: center as class="intro" */
+
+.intro {
+    text-align: center;
+}
+
+.intro h2 {
+    font-size: 55px;
+    color: #024e76;
+    margin-bottom: 35px;
+    padding: 0 100px 20px 100px;
+    border-bottom: 3px solid;
+    border-color: #fce138;
+    display: inline-block;
+}
+
+.intro p {
+    line-height: 1.7;
+    color: #39a6b2;
+    width: 80%;
+    font-size: 20x;
+    /* display:inline-block; or margin: 0 auto:*/
+    margin: 0 auto;
+
+}
