--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,4 @@
 /* Remove default browser-enforced styles */
-
 * {
     margin: 0;
     padding: 0;
@@ -14,14 +13,12 @@ body {
 }
 
 /* apply styles to <header>*/
-
 header {
     padding: 20px 35px;
     background-color: #39a6b2;
 }
 
 /* adding display: inline takes the header nav elements and allow them to be back in inside the header block*/
-
 header h1 {
     font-weight: bold;
     font-size: 36px;
@@ -79,7 +76,6 @@ section {
     padding: 60px;
 }
 
-
 /*Hero Style Start */
 .hero {
     background-image: url("../images/hero-bg.jpg");
@@ -91,10 +87,8 @@ section {
 /*Here Style End */
 
 /*Hero Form Style*/
-
 .hero-form {
     /*Will include border declaration block for learning purposes. Shorthand is border: solid 3px #024e76;*/
-
     border-style: solid;
     border-width: 3px;
     border-color:#024e76;
@@ -143,13 +137,10 @@ section {
 
 
 /* What you do section */
-
 /* Style all introduction as text-align: center as class="intro" */
-
 .intro {
     text-align: center;
 }
-
 
 .intro p {
     line-height: 1.7;
@@ -187,7 +178,6 @@ section {
     margin-bottom: 80px;
 }
 
-
 .steps img {
     width: 15%;
     margin: 10px 0;
@@ -207,3 +197,58 @@ section {
 .steps span {
     font-size: 38px;
 }
+
+/*Trainers section styles*/
+
+.trainers {
+    text-align: center;
+}
+
+.trainer {
+    width: 900px;
+    margin: 0 auto 30px auto;
+    background: #024e76;
+    color: #fce138;
+    /*provided block formatting context - told the article element to check that there is content of float html*/
+    overflow: auto;
+}
+
+.trainer img {
+    /*width made the picture smaller as it size horizontally is smaller*/
+    width: 35%;
+    /*takes the content and floats it left to the border.*/
+    float: left;
+
+}
+
+.trainer-bio {
+    padding: 35px;   
+    float: left;
+    width: 65%;
+}
+
+.trainer-bio h3 {
+    font-size: 32px;
+    margin-bottom: 8px;
+}
+
+.trainer-bio h4 {
+    font-weight: lighter;
+    font-size: 26px;
+    margin-bottom: 25px;
+}
+
+.trainer-bio p {
+    font-size: 17px;
+    line-height: 1.3;
+}
+
+.text-left {
+    text-align: left;
+}
+
+.text-right {
+    text-align: right;
+}
+
+
