--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -251,6 +251,11 @@ section {
     color: #fce138;
 }
 
+.contact h3 {
+    color: #fce138;
+    font-size: 32px;
+}
+
 /*contact info i frame.*/
 .contact-info iframe {
     width: 400px;
@@ -265,9 +270,19 @@ section {
     margin: 30px 0 0 60px;
     color: white;
  
-
- 
 }
+
+.contact-info p, .contact-info address {
+    margin: 20px 0;
+    line-height: 1.5;
+    font-size: 20px;
+    font-style: normal;
+}
+
+.contact-info a {
+    color: #fce138;
+}
+
 
 .text-left {
     text-align: left;
