--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,10 +21,11 @@ header {
 /* adding display: inline takes the header nav elements and allow them to be back in inside the header block*/
 header h1 {
     font-weight: bold;
-    font-size: 36px;
+    font-size: 36px 10vw;
     color: #fce138;
     margin: 0;
     display: inline;
+    
 }
 
 header a {
@@ -46,7 +47,9 @@ header nav ul li {
 header nav ul li a {
     margin: 0 30px;
     font-weight: lighter;
-    font-size: 22px;
+    font-size: 22px 10vw;
+    
+    
 }
 
 footer {
