Privacy page completed - added Runbuddy link to go back to index.html - main page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -295,3 +295,18 @@ section {
     text-align: right;
 }
 
+
+.page-title h2 {
+    display: inline-block;
+    border-bottom: 4px solid;
+    color: #fce138;
+    /*padding long format for learning purposes*/
+    padding-top: 0;
+    padding-right: 42px;
+    padding-bottom: 15px;
+    padding-left: 80px;
+    font-size: 42px;
+    font-weight: normal;
+    font-style: italic;
+  }
+  
