add flexbox to header

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,9 @@ body {
 header {
     padding: 20px 35px;
     background-color: #39a6b2;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 /* adding display: inline takes the header nav elements and allow them to be back in inside the header block*/
@@ -24,8 +27,6 @@ header h1 {
     font-size: 36px;
     color: #fce138;
     margin: 0;
-    display: inline;
-    
 }
 
 header a {
@@ -36,7 +37,7 @@ header a {
 }
 
 header nav {
-    float: right;
+    
     margin: 7px 0;
 }
 
