--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,7 +20,28 @@ header {
     justify-content: space-between;
     flex-wrap: wrap;
     list-style: none;
+    justify-content: space-between;
 }
+
+
+/* Flex added to the UL elements which in flex-direction default of row. */
+/* Then we needed to move the list elements arranged in rows to arrange in rows again, hence the row viewFlex added to the UL elements which in flex-direction default of row. */
+
+header nav ul {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-end;
+    align-items: center;
+  }
+  
+  header nav ul li a {
+    margin: 0 30px;
+    font-weight: lighter;
+    /*measurment of vw is equal to view port measurement. When moving the size of the window, It shrings in size too relatively to the view point of the user"*/
+    font-size: 1.55vw;
+   
+}
+
 
 /* adding display: inline takes the header nav elements and allow them to be back in inside the header block*/
 header h1 {
@@ -37,38 +58,23 @@ header a {
     color: #fce138;
 }
 
-/* Flex added to the UL elements which in flex-direction default of row. */
-/* Then we needed to move the list elements arranged in rows to arrange in rows again, hence the row view */
-
-header nav ul {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: flex-end;
-    align-items: center;
-  }
-  
-  header nav ul li a {
-    margin: 0 30px;
-    font-weight: lighter;
-    font-size: 1.55vw;
-}
-
 
 footer {
     background: #fce138;
     width: 100%;
-    padding: 40px 35px
+    padding: 40px 35px;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 footer h2 {
-    display: inline;
     color: #024e76;
     font-size: 30px;
     margin: 0
 }
 
 footer div {
-    float: right;
     line-height: 1.5;
     text-align: right;
 }
@@ -84,12 +90,34 @@ section {
 /*Hero Style Start */
 .hero {
     background-image: url("../images/hero-bg.jpg");
-    height: 600px;
+    
     background-size: cover;
     background-position: center;
-    position: relative;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    flex-direction: row;
+    
   }
 /*Here Style End */
+
+/* Hero CTA class*/
+.hero-cta {
+  
+    width: 35%;
+    text-align: right;
+    margin: 3.5%;
+    color: #fff;
+    font-size: 18px;
+    line-height: 1.3;
+}
+
+.hero-cta h2 {
+    font-style: italic;
+    font-size: 55px;
+    color: #fce138;
+
+}
 
 /*Hero Form Style*/
 .hero-form {
@@ -99,10 +127,11 @@ section {
     border-color:#024e76;
     background-color: #fce138;
     padding: 20px;
-    width: 500px;
     color: #024e76;
-    position: absolute;
-    bottom: 120px;
+    width: 40%;
+    margin: 3.5%;
+    
+    
     right:140px;
 }
 
