--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -172,9 +172,8 @@ section {
 
 /* What you do section */
 /* Style all introduction as text-align: center as class="intro" */
-.intro {
-    text-align: center;
-}
+/* Above comment replaced with Flex */
+
 
 .intro p {
     line-height: 1.7;
@@ -183,20 +182,23 @@ section {
     font-size: 20x;
     /* display:inline-block; or margin: 0 auto:*/
     margin: 0 auto;
+    text-align: center;
 }
 
 .steps {
-    text-align: center;
+    
     background: #fce138;
 }
 
 .section-title {
     font-size: 55px;
-    color: #024e76;
-    margin-bottom: 35px;
-    padding: 0 100px 20px 100px;
-    display: inline-block;
+    color: #024e76; 
     border-bottom: 3px solid;
+    padding-bottom: 20px;
+    text-align: center;
+    margin: 0 auto 35px auto;
+    width: 50%;
+    
 }
 
 .primary-border {
@@ -232,9 +234,10 @@ section {
 }
 
 /*Trainers section styles*/
+/*Below text-align replaced with flex. */
 
 .trainers {
-    text-align: center;
+   
 }
 
 .trainer {
@@ -276,8 +279,8 @@ section {
     line-height: 1.3;
 }
 
+/*Text align removed as flex used for .contact class */
 .contact {
-    text-align: center;
     background: #024e76;
 }
 
@@ -341,3 +344,7 @@ section {
     font-style: italic;
   }
   
+.flex-row {
+    display: flex;
+
+}
