--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -327,24 +327,36 @@ section {
     font-size: 32px;
 }
 
+/*Flex class for contact-info*/
+.contact-info {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+   
+/*Give all elements of the flex class contact-info the equal amount of space or growth.*/
+
+.contact-info > * {
+    flex: 1;
+    margin: 15px;
+  
+  }
+  
+
+
 /*contact info i frame.*/
 .contact-info iframe {
-    width: 400px;
+    
     height: 400px;
 }
 
 .contact-info div {
-    width: 400px;
-    display:inline-block;
-    vertical-align: top;
-    text-align: left;
-    margin: 30px 0 0 60px;
     color: white;
  
 }
 
 .contact-info p, .contact-info address {
-    margin: 20px 0;
+    margin: 16px 0;
     line-height: 1.5;
     font-size: 20px;
     font-style: normal;
@@ -352,6 +364,28 @@ section {
 
 .contact-info a {
     color: #fce138;
+}
+
+.contact-form input, .contact-form textarea {
+    border: 1px solid #024e76;
+    display: block;
+    padding: 7px 15px;
+    font-size: 16px;
+    color: #024e76;
+    width: 100%;
+    margin-bottom: 15px;
+    margin-top: 5px; 
+}
+
+.contact-form button {
+    width: 100%;
+    border: none;
+    background: #fce138;
+    color: #024e76;
+    text-align: center;
+    padding: 15px 0;
+    font-size: 16px;
+    
 }
 
 
