--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,6 @@
+
+
+
 /* Remove default browser-enforced styles */
 * {
     margin: 0;
@@ -35,7 +38,7 @@ header nav ul {
   }
   
   header nav ul li a {
-    margin: 0 30px;
+    padding: 10px 15px;
     font-weight: lighter;
     /*measurment of vw is equal to view port measurement. When moving the size of the window, It shrings in size too relatively to the view point of the user"*/
     font-size: 1.55vw;
@@ -90,13 +93,13 @@ section {
 /*Hero Style Start */
 .hero {
     background-image: url("../images/hero-bg.jpg");
-    
     background-size: cover;
     background-position: center;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
     flex-direction: row;
+    align-items: flex-start;
     
   }
 /*Here Style End */
@@ -109,7 +112,7 @@ section {
     margin: 3.5%;
     color: #fff;
     font-size: 18px;
-    line-height: 1.3;
+    line-height: 1.2;
 }
 
 .hero-cta h2 {
@@ -191,7 +194,7 @@ section {
 }
 
 .section-title {
-    font-size: 55px;
+    font-size: 48px;
     color: #024e76; 
     border-bottom: 3px solid;
     padding-bottom: 20px;
@@ -416,3 +419,67 @@ section {
     display: flex;
 
 }
+
+/* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
+/* this will be applied on any screen smaller than 980px */
+@media screen and (max-width: 980px) {
+    header {
+        padding-bottom: 0;
+        justify-content: center;
+      }
+
+      header h1 {
+        width: 100%;
+        text-align: center;
+      }
+      
+      header nav ul {
+        margin-top: 20px;
+        width: 100%;
+        justify-content: center;
+      }
+
+      footer h2, footer div {
+        text-align: center;
+        width: 100%;
+      }
+
+      .hero-cta, .hero-form {
+        width: 100%;
+      }
+      
+      .hero-cta {
+        text-align: center;
+      }
+
+      .section-title {
+        width: 80%;
+      }
+
+      .trainer {
+        flex: 0 70%;
+      }
+
+      .contact-info iframe{
+        flex: 1 100%;
+      }
+  
+  }
+
+
+  
+
+
+/* MEDIA QUERY FOR TABLETS AND SMALLER */
+/* this will be applied on any screen smaller than 768px */
+@media screen and (max-width: 768px) {
+
+  }
+  
+  /* MEDIA QUERY FOR MOBILE PHONES AND SMALLER */
+   /* this will be applied on any screen smaller than 575px */
+  @media screen and (max-width: 575px) {
+     
+   
+    }
+  
