--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -342,7 +342,6 @@ section {
 .contact-info > * {
     flex: 1;
     margin: 15px;
-  
   }
   
 
@@ -427,18 +426,22 @@ section {
         padding-bottom: 0;
         justify-content: center;
       }
-
+    
       header h1 {
         width: 100%;
         text-align: center;
       }
-      
+    
       header nav ul {
         margin-top: 20px;
         width: 100%;
         justify-content: center;
       }
-
+    
+      header nav ul li a {
+        font-size: 20px;
+      }
+    
       footer h2, footer div {
         text-align: center;
         width: 100%;
@@ -455,11 +458,11 @@ section {
       .section-title {
         width: 80%;
       }
-
+      
       .trainer {
         flex: 0 70%;
       }
-
+      
       .contact-info iframe{
         flex: 1 100%;
       }
@@ -473,13 +476,67 @@ section {
 /* MEDIA QUERY FOR TABLETS AND SMALLER */
 /* this will be applied on any screen smaller than 768px */
 @media screen and (max-width: 768px) {
-
+    
+    section {
+        padding: 30px 15px;
+      }
+    
+      .step h3 {
+        flex: 1 100%;
+        text-align: center;
+      }
+    
+      .step-info {
+        flex: 2 100%;
+        text-align: center;
+        justify-content: center;
+      }
+    
+      .step-img {
+        flex: 0 32%;
+        margin-right: 0;
+        margin-top: 15px;
+        margin-bottom: 15px;
+      }
+    
+      .step-text {
+        flex: 100%;  
+      }
   }
   
   /* MEDIA QUERY FOR MOBILE PHONES AND SMALLER */
    /* this will be applied on any screen smaller than 575px */
   @media screen and (max-width: 575px) {
-     
-   
-    }
+
+    .hero-form button {
+        width: 100%;
+      }
+    
+      .section-title {
+        width: 95%;
+      }
+    
+      .intro p {
+        width: 100%;
+      }
+    
+      .trainer {
+        flex: 0 100%;
+      }
+    
+      .contact-info {
+        text-align: left;
+      }
   
+      .contact-info > * {
+        flex: 0 100%;
+      }   
+      
+  
+      .contact-form {
+        order: 3;
+      }
+      
+      
+      
+    }
