--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -316,6 +316,24 @@ section {
     line-height: 1.3;
 }
 
+
+/*Grid CSS styles*/
+
+.service-grid-container {
+  display: grid;
+}
+
+.service-grid-item {
+    width: 200px;
+    height: 50px;
+    background-color: orange;
+    border: solid;
+    color: black;
+
+}
+
+
+
 /*Text align removed as flex used for .contact class */
 .contact {
     background: #024e76;
@@ -466,12 +484,8 @@ section {
       .contact-info iframe{
         flex: 1 100%;
       }
-  
+
   }
-
-
-  
-
 
 /* MEDIA QUERY FOR TABLETS AND SMALLER */
 /* this will be applied on any screen smaller than 768px */
@@ -532,11 +546,9 @@ section {
         flex: 0 100%;
       }   
       
-  
       .contact-form {
         order: 3;
       }
-      
       
       
     }
