--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -321,16 +321,97 @@ section {
 
 .service-grid-container {
   display: grid;
+  max-width: 940px;
+  margin: 0 auto;
+  grid-template-columns: repeat(3, 1fr); /*3 columns equaly fractionatedc*/
+  grid-template-rows: repeat(3,100px); /*3 rows of a heigh of 100px equally*/
+  grid-gap: 10px;
+  background-color: blue;
+  border-style: solid;
+  grid-auto-flow: row;
+  /*Sample Code below of differnet grid column/row functionality"
+  /*
+  /*.grid-container {
+  grid-gap: <grid-row-gap> <grid-column-gap>;
+  }*/
+  /*As you can see in the grid-template-columns declaration, the 1fr 1fr value creates two equal-width tracks that grow and 
+  shrink depending on the available space.*/
+  /*Not using repeat
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 2fr 1fr;
+  */
+  /*Using grid column grow or shrink with 3 columns.*/
+  /*
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  */
+  /*
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  */
+  /*
+  grid-template-columns: 150px repeat(2, 1fr);
+  grid-template-rows: repeat(4, 5rem);
+  */
+  /*
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-template-rows: repeat(4, minmax(60px, auto));
+  */
+  
 }
 
 .service-grid-item {
-    width: 200px;
-    height: 50px;
+
+    
+    border-style: solid; 
     background-color: orange;
-    border: solid;
     color: black;
+    padding: 1em;
 
 }
+
+.box1 {
+    /*Full notation of column start/end and row start/end*/
+    /*
+    grid-column-start: 1;
+    grid-column-end: 2; 
+    grid-row-start: 1; 
+    grid-row-end: 3; 
+    */
+    /*Shorthand notation for column start/end and row start/end"*/
+    /*
+    grid-column: 1/2;
+    grid-row: 1/3
+    */
+    /*Shorthand notation same as above with negative values
+    grid-column: 1/-3; 
+    grid-row: 1/-2;
+    /*Shorthand how many grids spanned*/
+    
+    grid-column: 1/ span 1; 
+    grid-row: 1/ span 2; 
+    
+        
+}
+
+.box2 {
+    /*Suggested by book*/
+    grid-column: 3/4; 
+    grid-row: 1/-1; 
+    
+    
+    /*Span mode*/
+    /*
+    grid-column: 3/ span 1;
+    grid-row: 1/ span 4;
+    */
+    
+}
+
+.box3 {
+    grid-column: 2/ span 2; 
+    grid-row: 3/ span 1; 
+  }
 
 
 
