--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,7 +23,7 @@ header {
     justify-content: space-between;
     flex-wrap: wrap;
     list-style: none;
-    justify-content: space-between;
+    
 }
 
 
@@ -319,104 +319,69 @@ section {
 
 /*Grid CSS styles*/
 
-.service-grid-container {
-  display: grid;
-  max-width: 940px;
-  margin: 0 auto;
-  grid-template-columns: repeat(3, 1fr); /*3 columns equaly fractionatedc*/
-  grid-template-rows: repeat(3,100px); /*3 rows of a heigh of 100px equally*/
-  grid-gap: 10px;
-  background-color: blue;
-  border-style: solid;
-  grid-auto-flow: row;
-  /*justify-items - row*/
-  /*align-items - column*/
-  justify-items: stretch;
-  align-items: stretch;
-  /*Sample Code below of differnet grid column/row functionality"
-  /*
-  /*.grid-container {
-  grid-gap: <grid-row-gap> <grid-column-gap>;
-  }*/
-  /*As you can see in the grid-template-columns declaration, the 1fr 1fr value creates two equal-width tracks that grow and 
-  shrink depending on the available space.*/
-  /*Not using repeat
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 2fr 1fr;
-  */
-  /*Using grid column grow or shrink with 3 columns.*/
-  /*
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr;
-  */
-  /*
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(3, 1fr);
-  */
-  /*
-  grid-template-columns: 150px repeat(2, 1fr);
-  grid-template-rows: repeat(4, 5rem);
-  */
-  /*
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  grid-template-rows: repeat(4, minmax(60px, auto));
-  */
+.services {
+
+    background: #fce138;
+
+}
+
+.service-grid-wrapper {
+
   
+    display: flex;
+    width: 100%;
+    justify-content: center;
+
+
+}
+
+.service-grid-container {
+
+    background: lightyellow;
+    width: 80%;
+    display: grid;
+    /* repeat(iterator, size) */
+    grid-template-columns: 1fr repeat(2, 4fr);
+    grid-template-rows: repeat(5, 1fr) 2fr;
+    border: 2px solid #024e76;
+    color:  #024e76;
+    font-size: 1.2rem;
+
 }
 
 .service-grid-item {
-
-    
-    border-style: solid; 
-    background-color: orange;
-    color: black;
-    padding: 1em;
-
+    padding: 15px 0;
+    border: 2px solid #024e76;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
 }
 
-.box1 {
-    /*Full notation of column start/end and row start/end*/
-    /*
-    grid-column-start: 1;
-    grid-column-end: 2; 
-    grid-row-start: 1; 
-    grid-row-end: 3; 
-    */
-    /*Shorthand notation for column start/end and row start/end"*/
-    /*
-    grid-column: 1/2;
-    grid-row: 1/3
-    */
-    /*Shorthand notation same as above with negative values
-    grid-column: 1/-3; 
-    grid-row: 1/-2;
-    /*Shorthand how many grids spanned*/
-    
-    grid-column: 1/ span 1; 
-    grid-row: 1/ span 2; 
-    
-        
-}
+/* specific match */
 
-.box2 {
-    /*Suggested by book*/
-    grid-column: 3/4; 
-    grid-row: 1/-1; 
-    
-    
-    /*Span mode*/
-    /*
-    grid-column: 3/ span 1;
-    grid-row: 1/ span 4;
-    */
-    
-}
-
-.box3 {
-    grid-column: 2/ span 2; 
-    grid-row: 3/ span 1; 
+.service-grid-item.basic {
+    grid-column: 2/ span 1;
   }
 
+.service-grid-item.both {
+    grid-column: 2/ span 2;
+}
+
+.service-grid-item.cancel {
+    transform: rotate(180deg);
+    writing-mode: vertical-lr;
+    
+    grid-column: 1;
+    grid-row: 1 / -1;
+}
+
+.grid-head, .grid-price, .service-grid-item.cancel {
+    font-size: 1.5rem;
+    font-weight: bold;
+
+
+}
 
 
 /*Text align removed as flex used for .contact class */
@@ -447,7 +412,6 @@ section {
     margin: 15px;
   }
   
-
 
 /*contact info i frame.*/
 .contact-info iframe {
@@ -601,6 +565,27 @@ section {
       .step-text {
         flex: 100%;  
       }
+
+    /* Grid table responsive layout*/
+    .service-grid-container {
+        grid-template-columns: 1fr 1fr;
+      }
+
+      .service-grid-item.basic {
+        grid-column: 1;
+      }
+
+      .service-grid-item.both {
+        grid-column: 1 / -1;
+      }
+
+      .service-grid-item.cancel {
+        transform: none;
+        writing-mode: unset;
+        grid-column: 1 / -1;
+        grid-row: -1;
+      }
+
   }
   
   /* MEDIA QUERY FOR MOBILE PHONES AND SMALLER */
