center align text updated in contact info

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -609,7 +609,7 @@ section {
       }
     
       .contact-info {
-        text-align: left;
+        text-align: center;
       }
   
       .contact-info > * {
