--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -476,6 +476,76 @@ section {
     /*float no longer required in flex*/
 }
 
+
+
+.trainer-1 {
+  background-image: url("../images/trainer-1-updated.jpg");
+}
+
+.trainer-2 {
+  background-image: url("../images/trainer-2-updated.jpg");
+}
+
+.trainer-3 {
+  background-image: url("../images/trainer-3-updated.jpg");
+}
+
+.trainer-img {
+  width: 100%;
+  min-height: 300px;
+  background-size: cover;
+  display: flex;
+  padding: 15px;
+  align-items: flex-end;
+  position: relative;
+  overflow: hidden;
+  
+}
+
+
+
+.trainer-img::after {
+  content: "";
+  height: 100%;
+  width: 100%;
+  background: linear-gradient(rgba(252, 225, 56, 0.3), var(--secondary-color));
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  transition: 0.5s;
+  
+}
+
+.trainer-img h3 {
+  position: relative;
+  z-index: 1;
+  font-size: 28px;
+  margin-bottom: 5px;
+  top: 200px;
+  transition: 0.6s;
+}
+
+
+.trainer-img h4 {
+  position: relative;
+  z-index: 1;
+  font-size: 22px;
+  top: 200px;
+  transition: 0.6s;
+  transition-delay: .2s;
+}
+
+.trainer:hover .trainer-img::after {
+  opacity: 1;
+}
+
+
+.trainer:hover .trainer-img h3, .trainer:hover .trainer-img h4 {
+  top: 0;
+}
+
+
 .trainer-bio {
     padding: 25px;   
     /*float no longer required in flex*/
@@ -483,6 +553,8 @@ section {
 
 .trainer-bio h3 {
     font-size: 28px;
+    display: none;
+    
    
 }
 
@@ -490,11 +562,13 @@ section {
     font-weight: lighter;
     font-size: 22px;
     margin-bottom: 15px;
+    display: none;
+    
 }
 
 .trainer-bio p {
     font-size: 17px;
-    line-height: 1.3;
+    
 }
 
 
@@ -728,6 +802,9 @@ section {
       .contact-info iframe{
         flex: 1 100%;
       }
+
+
+
   }
 
 /* MEDIA QUERY FOR TABLETS AND SMALLER */
@@ -779,6 +856,29 @@ section {
         grid-column: 1 / -1;
         grid-row: -1;
       }
+
+      .trainer-bio h3 {
+        display: block;
+     }
+
+      .trainer-bio h4 {
+        display: block;
+   
+      }
+      
+      .trainer-img h3 {
+        display: none;
+      }
+       
+      .trainer-img h4 {
+        display: none;
+      }
+
+      .trainer-img::after {
+        display: none;
+      }
+
+
 
   }
   
